--- a/src/Shop/Shop.css
+++ b/src/Shop/Shop.css
@@ -1,4 +1,23 @@
 .shop {
   display: grid;
-  grid-template-rows: 80% 1fr;
+  grid-template-rows: 70% 1fr;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+  width: 80%;
+  color: blue;
+}
+
+.door {
+  width: 100%;
+  height: 80%;
+
+}
+
+.open {
+  background-color: green;
+}
+
+.closed {
+  background-color: red;
 }
